--- a/index.html
+++ b/index.html
@@ -108,42 +108,59 @@
     <!-- END OUR PROGRAM -->
 
     <!-- AM I A GOOD FIT -->
-  <div class="white-back">
+  <div class="white-back awardee">
     <div class="row vertical-padding ">
       <div class="large-12 columns">
         <div class="">
-          <h2 class="text-left">2016 in review</h2>
+          <h2 class="text-left">Awardee review</h2>
           <div class="row" data-equalizer data-equalize-on="medium">
 
           </div>
 
           <div class="row">
             <div class="large-9 medium-6 medium-centered large-centered columns text-center">
-              <h2>9540 applications</h2>
+              <h2 class="f4"><div class="f6">9540</div> applications</h2>
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns text-center">
+            <div class="large-9 medium-6 medium-centered large-centered columns text-center mt4">
               <img src="img/ovals.png" alt="">
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns text-center">
+            <div class="large-9 medium-6 medium-centered large-centered columns mt4">
               <h2>Industries and Markets</h2>
               <img src="img/markets.png" alt="">
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns text-center">
-              <p>Coached 3264 first-time entrepreneurs and connected them with a network of thousands of mentors and experienced entrepreneurs through the I-Corps program.</p>
-              <img src="img/USA-dots.png" alt="">
+            <div class="large-9 medium-6 medium-centered large-centered columns mt4">
+              <div class="row">
+                <div class="large-4 columns">
+                  <p class="f2">Coached 3264 first-time entrepreneurs and connected them with a network of thousands of mentors and experienced entrepreneurs through the I-Corps program.</p>
+                </div>
+                <div class="large-8 columns text-center">
+                  <img src="img/USA-dots.png">
+                </div>
+              </div>
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns text-center">
-              <img src="img/donut.png" alt="">
-              <p>Fast tracked to $750k Phase II</p>
+            <div class="large-9 medium-6 medium-centered large-centered columns mt4">
+              <div class="row">
+                <div class="large-5 columns">
+                  <img src="img/donut.png">
+                </div>
+                <div class="large-7 columns">
+                  <h2 class="mt6 f4">Fast tracked to $750k Phase II</h2class>
+                </div>
+              </div>
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns text-center">
+            <div class="large-9 medium-6 medium-centered large-centered columns mt4">
               <h2>Meet one of our Awardees</h2>
-              <p>Augmented reality integrates “spatially registered” media with our real-world view of the environment. Researchers at Georgia Tech are building tools to enable non-technologists to more easily mix real and virtual elements to create augmented reality environments for all sorts of purposes, from entertainment to industry to medicine, and much more.</p>
-              <img src="img/video.png" alt="">
+              <div class="row">
+                <div class="large-5 columns">
+                  <p>Augmented reality integrates “spatially registered” media with our real-world view of the environment. Researchers at Georgia Tech are building tools to enable non-technologists to more easily mix real and virtual elements to create augmented reality environments for all sorts of purposes, from entertainment to industry to medicine, and much more.</p>
+                </div>
+                <div class="large-7 columns">
+                  <img src="img/video.png">
+                </div>
+              </div>
             </div>
 
           </div>
-
         </div>
       </div>
     </div>
