Add the news section:

--- a/company2.html
+++ b/company2.html
@@ -50,7 +50,7 @@
     <!-- OUR PROGRAM -->
     <div class="row vertical-padding tan-background">
       <div class="large-8 columns">
-        <h2 class="text-left" style="padding-bottom: 0px;">Botalive</h2>
+        <h2 class="text-left" style="padding-bottom: 0px;">Emoters, Inc.</h2>
         <h4 class="subheader">Design, deployment, and algorithmic optimization of zoomorphic, interactive robot companions</h4>
         <hr>
         <div class="row">
