Fixs up the news

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         <div class="large-12 columns">
           <div class="header">
             <span class="fl logo">
-              <img src="img/nsf1-logo.png" alt="">
+              <a href="index.html">
+                <img src="img/nsf1-logo.png" alt="">
+              </a>
             </span>
             <span class="fl text-logo">
-              <h3 class="small-head-text">National Science Foundation <br>SBIR Seed Funding Program</h3>
+              <a href="index.html">
+                <h3 class="small-head-text">National Science Foundation <br>SBIR Seed Funding Program</h3>
+              </a>
             </span>
           </div>
         </div>
@@ -37,10 +41,10 @@
 
       <div class="row">
         <ul class="top-nav-links">
-          <li><a href="#">The Program</a></li>
-          <li><a href="#">Our Portfolio</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Apply</a></li>
+          <li><a href="index.html#Program">The Program</a></li>
+          <li><a href="index.html#Portfolio">Our Portfolio</a></li>
+          <li><a href="index.html#Resources">Resources</a></li>
+          <li><a href="index.html#Apply">Apply</a></li>
         </ul>
       </div>
 
@@ -70,7 +74,7 @@
       <!-- END HERO -->
     </div><!-- END header-image-background -->
   </div><!-- END header-image-background -->
-  <div class="soft-back">
+  <div class="soft-back" id="Program">
     <!-- OUR PROGRAM -->
     <div class="row vertical-padding tan-background">
       <div class="large-12 columns">
@@ -108,7 +112,7 @@
     <!-- END OUR PROGRAM -->
 
     <!-- AM I A GOOD FIT -->
-  <div class="white-back awardee">
+  <div class="white-back awardee" id="Resources">
     <div class="row vertical-padding ">
       <div class="large-12 columns">
         <div class="">
@@ -168,7 +172,7 @@
     <!-- END AM I A GOOD FIT -->
 
     <!-- PROGRAM DIRECTORS -->
-  <div class="blue-back">
+  <div class="blue-back" id="Portfolio">
     <div class="row vertical-padding">
       <div class="large-12 columns">
         <h2 class="text-left">Portfolio news</h2>
@@ -185,7 +189,7 @@
               </div>
               <h4>
                 <small>Fundraising</small><br>
-                <span class="company-name">KKeen Home nabs investment from investor Robert Herjavec on Shark Tank</span>
+                <span class="company-name">Keen Home nabs investment from investor Robert Herjavec on Shark Tank</span>
               </h4>
               <h4>
                 <small>Keywords</small><br>
@@ -238,15 +242,8 @@
   </div>
     <!-- END PROGRAM DIRECTORS -->
 
-
-    <div class="row">
-      <div class="large-2 medium-3 medium-centered large-centered columns text-center">
-        <hr>
-      </div>
-    </div>
-
     <!-- HAVE QUESTIONS -->
-    <div class="row vertical-padding">
+    <div class="row white-back apply-back" id="Apply">
       <div class="large-12 columns text-center">
         <h3 class="text-left">Have Questions?</h3>
         <br>
