--- a/company2.html
+++ b/company2.html
@@ -25,10 +25,14 @@
         <div class="large-12 columns">
           <div class="header">
             <span class="fl logo">
-              <img src="img/nsf1-logo.png" alt="">
+              <a href="index.html">
+                <img src="img/nsf1-logo.png" alt="">
+              </a>
             </span>
             <span class="fl text-logo">
-              <h3 class="small-head-text">National Science Foundation <br>SBIR Seed Funding Program</h3>
+              <a href="index.html">
+                <h3 class="small-head-text">National Science Foundation <br>SBIR Seed Funding Program</h3>
+              </a>
             </span>
           </div>
         </div>
@@ -37,10 +41,10 @@
 
       <div class="row">
         <ul class="top-nav-links">
-          <li><a href="#">The Program</a></li>
-          <li><a href="#">Our Portfolio</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Apply</a></li>
+          <li><a href="index.html#Program">The Program</a></li>
+          <li><a href="index.html#Portfolio">Our Portfolio</a></li>
+          <li><a href="index.html#Resources">Resources</a></li>
+          <li><a href="index.html#Apply">Apply</a></li>
         </ul>
       </div>
 
@@ -138,14 +142,74 @@
   <div class="blue-back">
     <div class="row vertical-padding">
       <div class="large-12 columns">
-        <h2 class="text-left">News</h2>
-        <div class="row">
-          <div class="medium-12 column"></div>
+        <h2 class="text-left">Portfolio news</h2>
+        <div class="row" data-equalizer data-equalize-on="medium">
+          <div class="medium-4 column">
+            <a href="company1.html">
+            <div class="column-container white-bg" data-equalizer-watch>
+              <h4>
+                <small>Company</small><br>
+                <span class="company-name">Keen Home</span>
+              </h4>
+              <div class="image-wrapper">
+                <img src="img/keenhome.png" alt="">
+              </div>
+              <h4>
+                <small>Fundraising</small><br>
+                <span class="company-name">Keen Home nabs investment from investor Robert Herjavec on Shark Tank</span>
+              </h4>
+              <h4>
+                <small>Keywords</small><br>
+                <span><a href="">hardware</a>, <a href="">smart home</a>, <a href="">energy</a>, <a href="">IoT</a>, <a href="">BLE</a></span>
+              </h4>
+            </div>
+            </a>
+          </div>
+          <div class="medium-4 column">
+            <a href="company1.html">
+            <div class="column-container white-bg" data-equalizer-watch>
+              <h4>
+                <small>Company</small><br>
+                <span class="company-name">Qualcomm</span>
+              </h4>
+              <div class="image-wrapper">
+                <img src="img/pressrelease.png" alt="">
+              </div>
+              <h4>
+                <small>Keywords</small><br>
+                <span class="company-name"><a href="">telecommunications</a>, <a href="">chips</a>, <a href="">pivot</a></span>
+              </h4>
+            </div>
+            </a>
+          </div>
+          <div class="medium-4 column">
+            <a href="company1.html">
+            <div class="column-container white-bg" data-equalizer-watch>
+              <h4>
+                <small>Company</small><br>
+                <span class="company-name">Emoters, Inc.</span>
+              </h4>
+              <div class="image-wrapper">
+                <img src="img/botsalive.png" alt="">
+              </div>
+              <h4>
+                <small>Product</small><br>
+                <span class="company-name">10 things we learned building bots_alive—animal-like robots that use AI</span>
+              </h4>
+              <h4>
+                <small>Keywords</small><br>
+                <span class="company-name"><a href="">BLE</a>, <a href="">AI</a>, <a href="">smartphone</a>, <a href="">hardware</a>, <a href="">educational</a>, <a href="">toy</a></span>
+              </h4>
+            </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
     <!-- END PROGRAM DIRECTORS -->
+
+
 
 
     <div class="row">
