Bar graph transition to code

--- a/index.html
+++ b/index.html
@@ -126,9 +126,110 @@
             </div>
             <div class="large-9 medium-6 medium-centered large-centered columns mt4">
               <h2>Industries and Markets</h2>
-              <img src="img/markets.png" alt="">
+
+              <!-- bar graph -->
+              <div class="container horizontal rounded">
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="90%">Advanced Manufacturing and Nanotechnology</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="75%">Advanced Materials and Instrumentation</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="60%">Biological Technologies</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="20%">Biomedical Technologies</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="34%">Chemical and Environmental Technologies</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="82%">Educational Technologies and Applications</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="32%">Electronic Hardware, Robotics and Wireless Technologies</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="62%">Information Technologies</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="75%">Internet of Things</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="50%">Semiconductors and Photonic Devices and Materials</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="85%">Smart Health</span>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="progress-bar horizontal">
+                  <div class="progress-track">
+                    <div class="progress-fill">
+                      <span data-attr="35%">Other Topics</span>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+              <!-- / bar graph -->
+
             </div>
-            <div class="large-9 medium-6 medium-centered large-centered columns mt4">
+            <div class="large-9 medium-6 medium-centered large-centered columns pt6">
               <div class="row">
                 <div class="large-4 columns">
                   <p class="f2">Coached 3264 first-time entrepreneurs and connected them with a network of thousands of mentors and experienced entrepreneurs through the I-Corps program.</p>
